<resources>
    <string name="labelApp" translatable="false">Kõnele</string>
    <string name="labelComboListItem" translatable="false">• %2$s · %1$s</string>
    <string name="labelComboItem" translatable="false">%2$s · %1$s</string>
    <string name="labelSpeechInputViewMessage" translatable="false">[ %1$s ]</string>
    <string name="middot" translatable="false">·</string>
    <string name="check" translatable="false">✓</string>
    <string name="descriptionApp" translatable="false">speech-to-text services for Android apps</string>
    <string name="labelIme">Kõnele speak &amp; swipe</string>
    <string name="labelRecognitionServiceHttp">Kõnele (grammar support)</string>
    <string name="labelRecognitionServiceWs">Kõnele (fast recognition)</string>
    <string name="labelRecognitionServiceWs2">Kõnele (fast recognition 2)</string>
    <string name="labelRecognitionServiceDemo" translatable="false">Kõnele (DEMO)</string>
    <string name="labelActivityRecognizerIntent">@string/labelApp</string>
    <string name="labelActivityAbout">About Kõnele</string>
    <string name="labelActivityPreferences">Kõnele settings</string>
    <string name="labelActivityPreferencesRecognitionServiceHttp">@string/labelRecognitionServiceHttp</string>
    <string name="labelActivityPreferencesRecognitionServiceWs">@string/labelRecognitionServiceWs</string>
    <string name="labelActivityRewritesLoader">Kõnele rewrite rules</string>
    <string name="labelActivityRewritesSelector">Rewrite rule tables</string>
    <string name="labelActivityAppList">Apps</string>
    <string name="labelActivityGrammarList">Grammars</string>
    <string name="labelActivityServerList">Recognizer servers</string>
    <string name="labelActivitySimpleDemo">Simple demo</string>
    <string name="labelActivityExtrasDemo">Extras demo</string>
    <string name="labelActivityHandsfreeDemo">Handsfree demo</string>
    <string name="labelActivityChatDemo">Chat demo</string>
    <string name="labelActivityVoiceSearchDemo">Voice search demo</string>
    <string name="labelActivityEncoderDemo">Other tests/demos</string>
    <string name="labelActivityFormDemo">Form demo</string>
    <string name="labelActivityQuickSettings">Quick settings</string>
    <string name="labelRewritesName">Save the rewrites table as:</string>
    <string name="labelRewritesChooser">or overwrite an existing table:</string>
    <string name="labelRewritesShare">Share the rewrites table</string>
    <string name="hintSearch">Search</string>
    <string name="labelSearch">Search"</string>
    <string name="titleSearchRewrites">Filter rewrites</string>
    <string name="hintName">name</string>
    <string name="titleDefaultServiceHttp">HTTP URL</string>
    <string name="titleCategoryUi">Voice search panel</string>
    <string name="titleCategoryApps">Apps, Grammars, Rewrites</string>
    <string name="titleCategoryIme">Speak &amp; swipe keyboard</string>
    <string name="titleCategoryServices">Recognition services</string>
    <string name="titleCategoryDevel">For developers</string>
    <string name="titleServiceHttp">@string/labelRecognitionServiceHttp</string>
    <string name="titleServiceWs">@string/labelRecognitionServiceWs</string>
    <string name="summaryServiceHttp">Supports Estonian and Grammatical Framework. Based on an HTTP-server.</string>
    <string name="summaryServiceWs">Supports Estonian and fast/accurate recognition. Based on a WebSocket-server.</string>
    <string name="titleScreenDemos">Demos</string>
    <string name="summaryScreenDemos">Demo apps that show different ways of using speech input</string>
    <string name="titleAutoStart">Auto start</string>
    <string name="summaryAutoStart">Start recording automatically</string>
    <string name="titleAutoStopAfterPause">Auto stop after pause</string>
    <string name="summaryAutoStopAfterPause">Stop recording after a longer pause</string>
    <string name="titleAutoStopAfterTime">Max recording time</string>
    <string name="summaryAutoStopAfterTime">Stop recording after %1$s seconds</string>
    <string name="titleImeShowPartialResults">Partial results</string>
    <string name="summaryImeShowPartialResults">Show partial recognition results in the text field</string>
    <string name="titleRespectLocale">Support device language</string>
    <string name="summaryRespectLocale">Assume that the input speech is in the device\'s default language,
        unless the app sets a different language</string>
    <string name="titleRecordingRate">Sample rate</string>
    <string name="summaryRecordingRate">Sampling %1$s times per second</string>
    <string name="titleAudioFormat">Audio format</string>
    <string name="summaryAudioFormat">%1$s\n(Using a non-raw format results in 2x less network traffic. Requires at least Android v4.1 or even v5.0, and might not work on all devices.)</string>
    <string name="titleAudioCues">Play audio cues</string>
    <string name="summaryAudioCues">Beep before and after recording</string>
    <string name="titleWsServer">WebSocket URL</string>
    <string name="summaryWsServer" translatable="false">%1$s</string>
    <string name="titleHelpText">Help text</string>
    <string name="summaryHelpText">Show usage instructions by the microphone button. Makes the search panel larger.</string>
    <string name="titleReturnErrors">Return errors</string>
    <string name="summaryReturnErrors">Return network/audio/etc. errors to the caller (useful if the caller does error handling)</string>
    <string name="titleImeHelpText">Help text</string>
    <string name="summaryImeHelpText">Show usage instructions by the microphone button. Makes the keyboard larger.</string>
    <string name="summaryImeCombo">Updating…</string>
    <string name="titleEnableIme">Enable Kõnele keyboard</string>
    <string name="summaryEnableIme">The Kõnele keyboard allows you to dictate into any text field in any app, and modify the text with some swipe operations. Tap here to enable it in the Android virtual keyboard settings.</string>
    <string name="summaryAppList">List of apps where you have used speech input</string>
    <string name="summaryGrammarList">List of grammars that translate the raw transcription into app-specific language</string>
    <string name="summarySimpleDemo">Demonstrates the simplest way of using the speech recognizer</string>
    <string name="summaryExtrasDemo">Shows only the "result extras" returned by the recognizer</string>
    <string name="summaryHandsfreeDemo">Repeatedly calls the speech recognizer and shows the best transcription. Grammar can be assigned to the input (via menu).</string>
    <string name="summaryChatDemo">Chat-style UI for calling intents</string>
    <string name="summaryVoiceSearchDemo">Forwards the results to a search app</string>
    <string name="summaryEncoderDemo">Various other tests and demos (recording, audio compression, voice IMEs, etc.)</string>
    <string name="summaryFormDemo">HTML form with various types of fields for testing the IME</string>
    <string name="titleCombo">Recognition languages &amp; services</string>
    <string name="dialogTitleCombo">Languages &amp; services</string>
    <string name="titleSystemVoiceInputSettings">All recognition services</string>
    <string name="summarySystemVoiceInputSettings">System-wide settings of all the installed speech recognition services, as well as the Assist-app.</string>
    <string name="titleSelectRewrites">Rewrites</string>
    <string name="summarySelectRewrites">List of available rewrite rule tables that can be used to rewrite the transcription.</string>
    <string name="titleQuickSettings">Quick settings</string>
    <string name="summaryQuickSettings">Quickly apply some common default settings</string>
    <string name="titleGetPutPrefSkipUi">Run GetPutPreference without confirmation</string>
    <string name="summaryGetPutPrefSkipUi">Allow GetPutPreference to change preferences without user confirmation.
    This allows rewrite rules, or ADB scripts, or 3rd party apps to change multiple Kõnele settings without
        the user having to confirm each change. Do not enable this setting, unless you know what you are doing.</string>
    <string name="titleMaxResults">Recognition hypotheses</string>
    <plurals name="summaryMaxResults">
        <item quantity="one">Output only the most likely recognition hypothesis</item>
        <item quantity="other">Output at most %d recognition hypotheses</item>
    </plurals>
    <string name="buttonSpeak">Tap &amp; Speak</string>
    <string name="buttonImeSpeak">Tap &amp; Speak</string>
    <string name="buttonImeStop">Speak now! Tap when finished</string>
    <string name="buttonImeStopByPause">Speak now! Pause when finished</string>
    <string name="buttonYes">Yes</string>
    <string name="buttonNo">No</string>
    <string name="buttonOk">OK</string>
    <string name="buttonGoToSettings">Go to settings</string>
    <string name="buttonCancel">Cancel</string>
    <string name="statusTranscribing">Transcribing…</string>
    <string name="statusImeTranscribing">Still transcribing…</string>
    <string name="tvAbout">&lt;p>%1$s is an app that offers speech-to-text services to other apps.
        Many apps contain a text area or a text field (e.g. a search bar) that can be edited using the keyboard.
        %1$s provides a keyboard that allows text to be entered and edited via speech.
        Some apps (e.g. intelligent assistants, navigation apps) also contain a microphone button
        that is either linked to the &lt;b>standard Android speech recognition activity&lt;/b> or the
        &lt;b>standard Android speech recognition service&lt;/b>.
        %1$s implements both the activity and the service.&lt;/p>

        &lt;p>How to use the Kõnele keyboard?
        Tap the big yellow button and start dictating, the words
        appear immediately in the text area.
        Swipe left to delete the previous word, swipe right to add a newline, double-tap to add space,
        long-press to select all text (e.g. to dictate over it). Rewrite rules allow you to define voice commands
        to edit an existing text.&lt;/p>

        &lt;p>How to use the voice search activity? Its user interface is similar to the speech keyboard
        but because the transcription is immediately executed (e.g. loaded into a web browser) or returned to the caller
        (e.g. a navigation app), there is no support for editing commands (such as the swipe operations).&lt;/p>

&lt;p>Kõnele can use any speech recognition service on the device, but it also comes with two services of its own.
        Each of these uses a separate cloud-based speech recognition server.
        One supports &lt;b>grammar-based speech recognition&lt;/b>, the other supports &lt;b>continuous full-duplex speech recognition&lt;/b>.
        Both servers focus on &lt;b>Estonian speech recognition&lt;/b>, but both are based on a fully open-source stack that makes them easy to deploy
        and customize for other languages.
        For more information, see &lt;a href="http://phon.ioc.ee">http://phon.ioc.ee&lt;/a>.&lt;/p>

		&lt;p>For the documentation, source code, etc. see the &lt;a href="http://kaljurand.github.io/K6nele/">%1$s website&lt;/a>.
        See also the &lt;a href="https://github.com/Kaljurand/K6nele/blob/master/privacy_policy.rst">privacy policy&lt;/a>.&lt;/p></string>
    <string name="cmShare">Share</string>
    <string name="cmTest">Test</string>
    <string name="cmRename">Rename</string>
    <string name="cmDelete">Delete</string>
    <string name="cdMicrophone">Press this button and speak</string>
    <string name="cdSettings">Kõnele settings</string>
    <string name="testComboLabel" translatable="false">English (United States) · Kõnele (grammar support)</string>
    <string name="testComboLabels" translatable="false">en-US(Kg) · en-X(G) · et-EE(Kf) · et-EE(Kg) · de-DE (G) · +/-</string>
</resources>